# waybarx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh
src/: ipc.rs  main.rs  ui_bridge.rs
src/providers/: mod.rs  system.rs
web/: index.html  main.ts  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
